--- a/styles/style.css
+++ b/styles/style.css
@@ -8,17 +8,22 @@ body{
     font-family: Helvetica, Arial, sans-serif;
 }
 
+svg{
+    width:1.5rem;
+    height:1.5rem;
+
+}
 .promo-bar{
     display:flex;
+    align-items: center;
     overflow: hidden;
     background-color: rgb(60, 60, 67);  
 }
 
 .marquee-content{
-    display: inline-block;
     white-space: nowrap;
     color: white;
-    font-size: 1em;
+    font-size: .875em;
     line-height: 2em;
     animation: marquee 30s linear infinite;
 }
@@ -27,6 +32,47 @@ body{
     content: "  |  ";
     color: white;
 
+}
+
+.site-header{
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    color:white;
+}
+
+
+.hamburger-menu{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:0.125rem;
+    padding-left: 1.5rem;
+    height: 3.4375rem;
+    background-color: white;
+    border:none;
+}
+
+.line-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .1875rem;
+    padding-left: 1.5rem 0;
+}
+
+.hamburger-line{
+    display:block;
+    height: .125rem;
+    width:1.25rem;
+    background-color: black;
+}
+
+.items-center{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 @keyframes marquee{
     0% {transform: translateX(100vw);}
