--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@ body{
     font-family: Helvetica, Arial, sans-serif;
 }
 
+.test-div{
+    width: 100%;
+    background-color: red;
+}
 li{
     list-style: none;
 }
@@ -42,6 +46,7 @@ svg{
     position: sticky;
     top: -2rem;  
     z-index: 10;
+    background-color: white;
 }
 
 .promo-bar{
@@ -63,6 +68,7 @@ svg{
 .header-top{
     display:flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center; 
 }
 
@@ -75,7 +81,7 @@ svg{
     display:flex;
     flex-direction: row;
     align-items: center;
-    gap:0.3rem;
+    gap:0.7rem;
 }
 
 .hamburger-menu{
@@ -117,6 +123,7 @@ svg{
   border: 1px solid #ccc;
   background: white;
 }
+
 
 .overlay{
     display:none;
@@ -160,6 +167,22 @@ svg{
     height: 1.5rem;
 }
 
+#heart-svg{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+svg:hover{
+    fill: var(--color-neutral-grey);
+    transition: fill 0.3s ease;
+}
+
+.svg-image-black-outline:hover{
+        filter: brightness(1.5) grayscale(0.8) invert(0.7);
+        transition: filter 0.3s ease;    
+}
+
+
 .header-search{
     width:100%;
 }
@@ -167,9 +190,11 @@ svg{
 .form-container{
     display:flex;
     align-items: center;
+    position: relative;
     padding-left: var(--header-elements-padding);
     padding-right: var(--header-elements-padding);
-    position: relative;
+    margin-bottom: .75rem;
+
 }
 
 .form-container::after {
@@ -182,6 +207,7 @@ svg{
 }
 #search-input{
     padding: .375rem .75rem;
+    outline: none;
     font-family: inherit;
     font-size: 1rem;
 }
@@ -208,8 +234,8 @@ svg{
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 1rem;
-    padding: 1.5rem 0.5rem 0.5rem 0.5rem;
+    gap: 1.5rem;
+    padding: 1.5rem .5rem;
     border-top:1px solid var(--color-neutral-grey);
     border-bottom:1px solid var(--color-neutral-grey);
 }
@@ -218,13 +244,105 @@ svg{
     text-decoration: none;
 }
 
+.dropdown-menu-footer{
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    background-color: #f4eede;
+}
+
+.dropdown-footer-item{
+    padding: 1rem 0 1rem 1.5rem;
+}
+
+.dropdown-footer-item a{
+    text-decoration: underline;
+}
 
 .transparent-block{
     background-color: inherit;
     border: none; 
 }
 
+.mobile-hidden{
+    display:none;
+
+}
 @keyframes marquee{
     0% {transform: translateX(100vw);}
     100% {transform: translateX(-100%);}
+}
+
+@media (min-width: 1260px) {
+
+    .site-header{
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+
+    .header-left{
+        order: 1;
+    }
+
+    .header-center img{
+        width: auto;
+        height:2rem;
+        margin: 0 2rem;
+    }
+    .header-search{
+        order: -1;
+        width: auto;
+    }
+
+    .hamburger-menu{
+        display: none;
+    }
+
+    .header-left{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+    }
+    .dropdown-menu{
+        display:block;
+        position: relative;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        border: none;
+    }
+
+    .dropdown-menu-top{
+        display: none;
+    }
+
+    .dropdown-menu-list{
+        border: none;
+    }
+
+    .dropdown-menu-footer{
+        display: none;
+    }
+
+    .mobile-hidden{
+        display:block;
+    }
+
+    #eu-svg:hover{
+        filter: brightness(1.5) grayscale(0.7);
+        transition: filter 0.3s ease;    
+    }
+
+    #person-svg{
+        width: 1.4rem;
+        height: 1.4rem;
+    }
+
+
+    #location-svg{
+        width:1.3rem;
+        height: 1.3rem;
+    }
 }
