--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,41 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --header-elements-padding: 1.5rem;
     --marquee-content-height: 2rem;
     --color-neutral-grey: #C4C4C6;
     --dropdown-link-color: rgb(60, 60, 67);
+    --sales-header-color: #7f0019;
 }
-body{
+
+body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-.test-div{
+main {
+    margin-top: 0.5rem;
+}
+
+.test-div {
     width: 100%;
     background-color: red;
 }
-li{
+
+li {
     list-style: none;
 }
 
-svg{
-    width:inherit;
+svg {
+    width: inherit;
     height: inherit;
 }
 
 
-.marquee-content{
+.marquee-content {
     white-space: nowrap;
     color: white;
     font-size: .875em;
@@ -36,7 +43,7 @@ svg{
     animation: marquee 30s linear infinite;
 }
 
-.marquee-content a:not(:last-child)::after{
+.marquee-content a:not(:last-child)::after {
     content: "  |  ";
     color: white;
 
@@ -44,57 +51,57 @@ svg{
 
 .header-wrapper {
     position: sticky;
-    top: -2rem;  
+    top: -2rem;
     z-index: 10;
     background-color: white;
 }
 
-.promo-bar{
-    display:flex;
+.promo-bar {
+    display: flex;
     align-items: center;
     overflow: hidden;
-    background-color: rgb(60, 60, 67);  
+    background-color: rgb(60, 60, 67);
 }
 
-.promo-bar-item{
-    color:white;
+.promo-bar-item {
+    color: white;
     text-decoration: none;
 }
 
-.promo-bar-item:hover{
+.promo-bar-item:hover {
     text-decoration: underline;
 }
 
-.header-top{
-    display:flex;
+.header-top {
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    align-items: center; 
+    align-items: center;
 }
 
 
-.header-right-nav{
+.header-right-nav {
     padding-right: var(--header-elements-padding);
 }
 
-.header-right-nav ul{
-    display:flex;
+.header-right-nav ul {
+    display: flex;
     flex-direction: row;
     align-items: center;
-    gap:0.7rem;
+    gap: 0.7rem;
 }
 
-.hamburger-menu{
-    display:flex;
+.hamburger-menu {
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    gap:0.125rem;
+    gap: 0.125rem;
     padding-left: var(--header-elements-padding);
     height: 3.4375rem;
 }
 
-.line-container{
-    display:flex;
+.line-container {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -102,93 +109,99 @@ svg{
     padding-left: 1.5rem 0;
 }
 
-.hamburger-line{
-    display:block;
+.hamburger-line {
+    display: block;
     height: .125rem;
-    width:1.25rem;
+    width: 1.25rem;
     background-color: black;
     transition: transform 0.3s ease-out;
 }
 
-#hamburger-toggle{
-    display:none;
+#hamburger-toggle {
+    display: none;
 }
 
 .dropdown-menu {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  z-index: 100;
-  width:100%;
-  border: 1px solid #ccc;
-  background: white;
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    border: 1px solid #ccc;
+    background: white;
 }
 
 
-.overlay{
-    display:none;
-    position:fixed;
+.overlay {
+    display: none;
+    position: fixed;
     z-index: 50;
-    width:100vw;
-    height:100vh;
-    background: rgba(0,0,0,0.3);
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
 }
 
-#hamburger-toggle:checked ~ .dropdown-menu{
-  display: flex;
+#hamburger-toggle:checked~.dropdown-menu {
+    display: flex;
 }
 
-#hamburger-toggle:checked ~ .overlay{
-  display: flex;
+#hamburger-toggle:checked~.overlay {
+    display: flex;
 }
 
-#hamburger-toggle:checked + .hamburger-menu #line1 {
-  transform: rotate(45deg) translateY(10px);
-}
-#hamburger-toggle:checked + .hamburger-menu #line2,
-#hamburger-toggle:checked + .hamburger-menu #line3 
-{
-  opacity: 0; 
+#hamburger-toggle:checked+.hamburger-menu #line1 {
+    transform: rotate(45deg) translateY(10px);
 }
 
-#hamburger-toggle:checked + .hamburger-menu #line4 {
-  transform: rotate(-45deg) translateY(-11.5px);
+#hamburger-toggle:checked+.hamburger-menu #line2,
+#hamburger-toggle:checked+.hamburger-menu #line3 {
+    opacity: 0;
 }
 
-.icon{
-    display:inline-block;
-    width:1.125rem;
-    height:1.125rem;
+#hamburger-toggle:checked+.hamburger-menu #line4 {
+    transform: rotate(-45deg) translateY(-11.5px);
 }
 
-.icon-small{
-    display:inline-block;
+.icon {
+    display: inline-block;
+    width: 1.125rem;
+    height: 1.125rem;
+}
+
+.icon-small {
+    display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
 }
 
-#heart-svg{
+#heart-svg {
     width: 1.5rem;
     height: 1.5rem;
 }
 
-svg:hover{
+svg:hover {
     fill: var(--color-neutral-grey);
     transition: fill 0.3s ease;
 }
 
-.svg-image-black-outline:hover{
-        filter: brightness(1.5) grayscale(0.8) invert(0.7);
-        transition: filter 0.3s ease;    
+.svg-image-black-outline:hover {
+    filter: brightness(1.5) grayscale(0.8) invert(0.7);
+    transition: filter 0.3s ease;
 }
 
 
-.header-search{
-    width:100%;
+.header-search {
+    width: 100%;
 }
 
-.form-container{
-    display:flex;
+#search-svg {
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+
+.form-container {
+    display: flex;
     align-items: center;
     position: relative;
     padding-left: var(--header-elements-padding);
@@ -201,50 +214,52 @@ svg:hover{
     content: '';
     position: absolute;
     left: var(--header-elements-padding);
-    right: var(--header-elements-padding); 
+    right: var(--header-elements-padding);
     bottom: 0;
     border-bottom: 1.5px solid var(--color-neutral-grey);
 }
-#search-input{
+
+#search-input {
     padding: .375rem .75rem;
     outline: none;
     font-family: inherit;
     font-size: 1rem;
 }
 
-.dropdown-menu-top{
+.dropdown-menu-top {
     display: flex;
     justify-content: space-between;
     padding-top: 1rem;
-    padding-bottom:1rem;
+    padding-bottom: 1rem;
 }
 
-.dropdown-item-centered{
+.dropdown-item-centered {
     display: flex;
     justify-content: center;
-    width:50%;
+    width: 50%;
 }
 
-.dropdown-divisory{
-    width:1px;
+.dropdown-divisory {
+    width: 1px;
     background-color: var(--color-neutral-grey);
 }
 
-.dropdown-menu-list{
-    display:flex;
+.dropdown-menu-list {
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 1.5rem;
     padding: 1.5rem .5rem;
-    border-top:1px solid var(--color-neutral-grey);
-    border-bottom:1px solid var(--color-neutral-grey);
+    border-top: 1px solid var(--color-neutral-grey);
+    border-bottom: 1px solid var(--color-neutral-grey);
 }
-.dropdown-action{
+
+.dropdown-action {
     color: var(--dropdown-link-color);
     text-decoration: none;
 }
 
-.dropdown-menu-footer{
+.dropdown-menu-footer {
     display: flex;
     flex-direction: column;
     padding-top: 1rem;
@@ -252,61 +267,157 @@ svg:hover{
     background-color: #f4eede;
 }
 
-.dropdown-footer-item{
+.dropdown-footer-item {
     padding: 1rem 0 1rem 1.5rem;
 }
 
-.dropdown-footer-item a{
+.dropdown-footer-item a {
     text-decoration: underline;
 }
 
-.transparent-block{
+.sales-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 3.5rem 0;
+    background-color: #d6ad7f;
+    ;
+}
+
+.sales-text-container {
+    margin-left: 1rem;
+    color: var(--sales-header-color);
+}
+
+.sales-title-text {
+    padding: .5rem 0;
+    font-size: clamp(1.8rem, 2.6vmax, 3rem);
+    letter-spacing: 0.3px;
+}
+
+.sales-title-text-large {
+    font-size: clamp(3.2rem, 6.6vmax, 8.5rem);
+}
+
+.sales-subtitle-text {
+    margin-top: 1.5rem;
+    font-size: clamp(1.1rem, 1.4vmax, 1.4rem);
+}
+
+#new-lines-added-text {
+    margin: 1.5rem 0;
+    font-weight: normal;
+}
+
+.promo-gallery {
+    display: flex;
+    gap: 0.5rem;
+    overflow-x: auto;
+    padding: 0 .5rem;
+    cursor: pointer;
+}
+
+.promo-card {
+    display: block;
+    flex: 0 0 74%;
+    position: relative;
+}
+
+.promo-card img {
+    width: 100%;
+    aspect-ratio: 4/5;
+    opacity: 90%;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.promo-card p{
+    position: absolute;
+    left: 50%;
+    bottom: 1.4rem;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    transform: translateX(-50%);
+}
+
+.promo-card p::after{
+    display: inline-block;
+    content: '';
+    background-color: var(--sales-header-color);
+    width:100%;
+    height:2px;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out;
+}
+
+.promo-card:hover p::after{
+    transform: scaleX(1);
+}
+
+.promo-card:hover img{
+    opacity: 1;
+}
+
+.transparent-block {
     background-color: inherit;
-    border: none; 
+    border: none;
 }
 
-.mobile-hidden{
-    display:none;
+.mobile-hidden {
+    display: none;
 
 }
-@keyframes marquee{
-    0% {transform: translateX(100vw);}
-    100% {transform: translateX(-100%);}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(100vw);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 @media (min-width: 1260px) {
 
-    .site-header{
+    main {
+        margin-top: 4.2rem;
+    }
+
+    .site-header {
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
     }
 
-    .header-left{
+    .header-left {
         order: 1;
     }
 
-    .header-center img{
+    .header-center img {
         width: auto;
-        height:2rem;
+        height: 2rem;
         margin: 0 2rem;
     }
-    .header-search{
+
+    .header-search {
         order: -1;
         width: auto;
     }
 
-    .hamburger-menu{
+
+    .hamburger-menu {
         display: none;
     }
 
-    .header-left{
+    .header-left {
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
     }
-    .dropdown-menu{
-        display:block;
+
+    .dropdown-menu {
+        display: block;
         position: relative;
         top: 100%;
         left: 0;
@@ -314,35 +425,35 @@ svg:hover{
         border: none;
     }
 
-    .dropdown-menu-top{
+    .dropdown-menu-top {
         display: none;
     }
 
-    .dropdown-menu-list{
+    .dropdown-menu-list {
         border: none;
     }
 
-    .dropdown-menu-footer{
+    .dropdown-menu-footer {
         display: none;
     }
 
-    .mobile-hidden{
-        display:block;
+    .mobile-hidden {
+        display: block;
     }
 
-    #eu-svg:hover{
+    #eu-svg:hover {
         filter: brightness(1.5) grayscale(0.7);
-        transition: filter 0.3s ease;    
+        transition: filter 0.3s ease;
     }
 
-    #person-svg{
+    #person-svg {
         width: 1.4rem;
         height: 1.4rem;
     }
 
 
-    #location-svg{
-        width:1.3rem;
+    #location-svg {
+        width: 1.3rem;
         height: 1.3rem;
     }
 }
