--- a/styles/style.css
+++ b/styles/style.css
@@ -280,7 +280,6 @@ svg:hover {
     grid-template-columns: 1fr;
     padding: 3.5rem 0;
     background-color: #d6ad7f;
-    ;
 }
 
 .sales-text-container {
@@ -312,49 +311,53 @@ svg:hover {
     display: flex;
     gap: 0.5rem;
     overflow-x: auto;
+    height:fit-content;
     padding: 0 .5rem;
     cursor: pointer;
 }
 
 .promo-card {
-    display: block;
     flex: 0 0 74%;
     position: relative;
+        aspect-ratio: 4/5;
 }
 
 .promo-card img {
     width: 100%;
-    aspect-ratio: 4/5;
     opacity: 90%;
     transition: opacity 0.3s ease-in-out;
 }
 
-.promo-card p{
+.promo-card p {
     position: absolute;
     left: 50%;
     bottom: 1.4rem;
+    height: fit-content;
     color: white;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     transform: translateX(-50%);
 }
 
-.promo-card p::after{
-    display: inline-block;
+.promo-card p::after {
     content: '';
+    display: inline-block;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
     background-color: var(--sales-header-color);
-    width:100%;
-    height:2px;
+    width: 100%;
+    height: 3px;
     transform: scaleX(0);
     transform-origin: left;
     transition: transform 0.5s ease-in-out;
 }
 
-.promo-card:hover p::after{
+.promo-card:hover p::after {
     transform: scaleX(1);
 }
 
-.promo-card:hover img{
+.promo-card:hover img {
     opacity: 1;
 }
 
@@ -456,4 +459,36 @@ svg:hover {
         width: 1.3rem;
         height: 1.3rem;
     }
+}
+
+@media (min-width:765px) {
+
+    .sales-container {
+        grid-template-columns: 1fr 60%;
+        align-items: center;
+        padding: 5rem 0;
+    }
+
+    .sales-text-container{
+        margin-left: 3.5rem;
+    }
+    .promo-gallery{
+        overflow-x: hidden;
+    }
+    .promo-card {
+        flex: 1 1 auto;
+    }
+
+    .promo-card img{
+        display: block;
+        width: 100%;
+        height: 105%;
+        object-fit: cover;
+    }
+
+    .promo-card p{
+        bottom: 5%;
+    }
+
+
 }
