--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,11 @@
     --color-neutral-grey: #C4C4C6;
     --dropdown-link-color: rgb(60, 60, 67);
     --sales-header-color: #7f0019;
+    --widget-margin: 5rem;
+    --title-font-min: 1.8rem;
+    --title-font-preferred: 2.6vmax;
+    --title-font-max: 3rem;
+    --text-shadow-color: rgba(0,0,0,0.5);
 }
 
 body {
@@ -326,6 +331,7 @@ svg:hover {
 .promo-card img {
     width: 100%;
     opacity: 90%;
+    pointer-events: none;
     transition: opacity 0.3s ease-in-out;
 }
 
@@ -336,7 +342,7 @@ svg:hover {
     height: fit-content;
     color: white;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px var(--text-shadow-color);
     transform: translateX(-50%);
 }
 
@@ -364,9 +370,8 @@ svg:hover {
     opacity: 1;
 }
 
-.highlights-container{
-    padding-top: 3.5rem;
-    padding-bottom: 2rem;
+.highlights-container {
+    padding: 3.5rem 0 2.5rem 1rem;
     background-color: #f5f3f2;
 }
 
@@ -374,13 +379,11 @@ svg:hover {
     display: flex;
     overflow-x: auto;
     gap: 0.5rem;
-    padding: 0 1rem;
     scroll-behavior: smooth;
 }
 
 .title-padded {
     margin-bottom: .75rem;
-    padding-left: 1rem;
     font-size: 1.125rem;
 }
 
@@ -398,24 +401,99 @@ svg:hover {
     font-weight: bold;
 }
 
-.highlights-card a{
+.highlights-card a {
     text-decoration: none;
 }
 
-.img-container{
+.img-container {
     overflow: hidden;
 
 }
+
 .img-container img {
     width: 100%;
+    height: auto;
     object-fit: cover;
     aspect-ratio: 1/1;
     transition: transform 0.3s ease-in-out;
 }
 
-.highlights-card:hover .img-container img{
+.highlights-card:hover .img-container img {
     transform: scale(1.03);
 }
+
+.hero-inner {
+    position: relative;
+    inset: 0;
+    min-height: 400px; 
+    aspect-ratio: 3/4;
+    overflow: hidden;
+    padding: 3.5rem 1.25rem;
+}
+
+
+.hero-inner img {
+    position: absolute;
+    width: calc(100% - 2.5rem);
+    height: calc(100% - 5rem);
+    object-fit: cover;
+    animation: fade 12s infinite;
+    animation-fill-mode: both;
+}
+
+.hero-inner img:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.hero-inner img:nth-child(2) {
+    animation-delay: 6s;
+}
+
+.hero-inner .hero-slide-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    width: calc(100% - 5rem);
+    transform: translate(-50%,-50%);
+    animation: fade 12s infinite;
+    animation-fill-mode: both;
+}
+
+.hero-inner .hero-slide-text:nth-child(3) { animation-delay: 0s; }
+.hero-inner .hero-slide-text:nth-child(4) { animation-delay: 6s; }
+
+.hero-slide-text h2 {
+    padding: .75rem 0;
+    font-size: clamp(var(--title-font-min),var(--title-font-preferred),var(--title-font-max));
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
+
+.hero-slide-text a{
+    display: block;
+    padding: .25rem 0;
+    color: white;
+    text-decoration: none;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
+
+
+.hero-slide-text a::after {
+    content: '\2192'; 
+    color: white;
+    font-weight: bold;
+    font-size: 1.3rem;
+    display: inline-block;
+    vertical-align: middle;
+    transition: transform 0.3s ease;
+    transform: translateX(0);         
+}
+
+.hero-slide-text a:hover::after {
+    transform: translateX(0.3rem);  
+}
+
 
 .mobile-hidden {
     display: none;
@@ -435,6 +513,28 @@ svg:hover {
 
     100% {
         transform: translateX(-100%);
+    }
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    10% {
+        opacity: 1;
+    }
+
+    40% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
     }
 }
 
@@ -519,14 +619,22 @@ svg:hover {
     }
 
     .sales-container {
-        padding: 8rem 0;
+        padding: 7rem 0;
+    }
+
+    .highlights-container {
+        padding-left: 5rem;
     }
 
 }
 
 @media (min-width: 765px) and (max-width: 1259px) {
     .sales-container {
-        padding: 5rem 0;
+        padding: 3.5rem 0;
+    }
+
+    .highlights-container {
+        padding-left: 3.5rem;
     }
 }
 
@@ -558,6 +666,13 @@ svg:hover {
 
     .promo-card p {
         bottom: 5%;
+    }
+
+
+
+    .highlights-card {
+        flex: 0 0 calc((100vw - 2.5*var(--widget-margin))/4);
+        overflow: hidden;
     }
 
 
