--- a/styles/style.css
+++ b/styles/style.css
@@ -339,31 +339,8 @@ svg:hover {
     position: absolute;
     left: 50%;
     bottom: 1.4rem;
-    height: fit-content;
-    color: white;
-    font-weight: bold;
     text-shadow: 2px 2px 4px var(--text-shadow-color);
     transform: translateX(-50%);
-}
-
-.highlights-card p::after,
-.promo-card p::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    background-color: var(--sales-header-color);
-    width: 100%;
-    height: 3px;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.5s ease-in-out;
-}
-
-.highlights-card:hover p::after,
-.promo-card:hover p::after {
-    transform: scaleX(1);
 }
 
 .promo-card:hover img {
@@ -418,6 +395,7 @@ svg:hover {
     transition: transform 0.3s ease-in-out;
 }
 
+.seller-card:hover .img-container img,
 .highlights-card:hover .img-container img {
     transform: scale(1.03);
 }
@@ -536,6 +514,66 @@ svg:hover {
     background-color: inherit;
     border: none;
 }
+
+.best-sellers-container{
+    padding: 2rem 1.25rem 3.5rem 1.25rem;
+}
+
+.best-sellers-container h4{
+    font-size: 1.125rem;
+    color: var(--dropdown-link-color);
+}
+
+.best-sellers-gallery{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    grid-gap: 10px 5px;
+}
+
+.seller-card{
+    position: relative;
+    width: 100%;
+}
+
+.seller-card img{
+    height: auto;
+    max-width: 100%;
+}
+
+.seller-card p{
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+}
+
+.link-with-paragraph{
+    height: fit-content;
+    color: white;
+    font-weight: bold;
+}
+
+.card-paragraph{
+    position: relative;
+}
+.card-paragraph::after{
+    content: '';
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: -2px;
+    background-color: var(--sales-header-color);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out;
+}
+
+.link-with-paragraph:hover .card-paragraph::after{
+    transform: scaleX(1);
+}
+
 
 
 @keyframes marquee {
@@ -657,7 +695,7 @@ svg:hover {
 
     .hero-inner .hero-slide-text {
         top: 55%;
-        left: 62%;
+        left: 60%;
     }
 
 
