--- a/styles/style.css
+++ b/styles/style.css
@@ -693,6 +693,125 @@ svg:hover {
 .story-card:hover .story-content p{
     color: var(--sales-header-color);
 }
+
+
+footer{
+    background-color: #3c3c43;
+}
+
+.footer-section{
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 4rem 3.5rem 0 3.5rem;
+    color: white;
+}
+
+.footer-section a{
+    color: white;
+}
+
+.footer-section a:hover{
+    text-decoration: underline;
+}
+
+.footer-div{
+    margin-bottom: 4rem;
+}
+
+.footer-div h4{
+    margin-bottom: 1.25rem;
+    font-size : 1.125rem;
+    font-weight: bold;
+}
+
+.footer-div p{
+    margin-bottom: 1.5rem;
+}
+
+.footer-div ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.footer-div .input-wrapper{
+    display: flex;
+}
+
+.input-wrapper input {
+    flex: 1;
+    height: 2.5rem;
+    padding: 0 0.5rem;
+    border: 1.5px solid #9d9da0;
+    font-size: 0.9rem;
+}
+
+.input-wrapper input:focus{
+    outline: none;
+    border: 2px solid var(--sales-header-color);    
+}
+
+.input-wrapper input::placeholder{
+    font-size: 1rem;
+}
+
+.input-wrapper button {
+    width: 2.5rem;
+    height: 2.5rem;
+    border: none;
+    background-color: var(--sales-header-color);
+    cursor: pointer;
+}
+
+.input-wrapper button img {
+    width: 1rem;
+    height: 1rem;
+    filter: invert(1);
+}
+
+
+.footer-logo-section{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+
+.line{
+    position: absolute;
+    z-index: 1;
+    top: 30%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: white;  
+}
+
+.footer-logo-container{
+    position: relative;
+    z-index: 2;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #3c3c43;
+}
+
+.footer-logo-container img{
+    position: relative;
+    width: 4rem;
+    height: 4rem;
+}
+
+.footer-logo-container p {
+    margin-bottom: 1.5rem;
+    font-size: 0.875rem;
+    color: white;
+    text-align: center;
+}
+
+
 .link-with-paragraph{
     height: fit-content;
     color: white;
