--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+    position: relative;
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -782,7 +783,7 @@ footer{
 .line{
     position: absolute;
     z-index: 1;
-    top: 30%;
+    top: 25%;
     left: 0;
     width: 100%;
     height: 1px;
@@ -811,6 +812,16 @@ footer{
     text-align: center;
 }
 
+#consent-manager {
+    position: relative;
+    padding: 0 3rem 1.5rem 2.5rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#user-preferences{
+    color: white;
+}
 
 .link-with-paragraph{
     height: fit-content;
@@ -879,6 +890,137 @@ footer{
     50%,100%{color: rgba(255,255,255,0.6);}
 }
 
+
+@media (min-width:765px) {
+
+    .sales-container {
+        grid-template-columns: 1fr 60%;
+        align-items: center;
+    }
+
+    .sales-text-container {
+        margin-left: 5rem;
+    }
+
+    .promo-gallery {
+        overflow-x: hidden;
+    }
+
+    .promo-card {
+        flex: 1 1 auto;
+    }
+
+    .promo-card img {
+        display: block;
+        width: 100%;
+        height: 105%;
+        object-fit: cover;
+    }
+
+    .promo-card p {
+        bottom: 5%;
+    }
+
+    .swipe-card {
+        flex: 0 0 calc((100vw - 2.5*var(--widget-margin))/4);
+        overflow: hidden;
+    }
+
+    .hero-inner{
+        aspect-ratio: 16/8;
+    }
+
+    .hero-inner-slider img[class*="mobile"]{
+        display: none;
+    }
+
+    .hero-inner-slider img[class*="desktop"]{
+        display: block;
+    }
+
+    .slide-indicator{
+        top: 75px;
+        right: 40px;
+    }
+
+    .link-wrapper{
+        display: flex;
+        gap: 1.5rem;
+    }
+
+    .best-sellers-gallery{
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 0.5rem;
+    }
+
+
+    .product-card{
+        flex: 0 0 25%;
+    }
+
+    .story-card{
+        flex: 0 0 calc((100vw - var(--widget-margin))/4);
+    }
+
+    .story-card .title{
+        font-size: 1.125rem;
+    }
+
+    .story-card .description{
+        font-size: 1rem;
+    }
+
+
+    .input-wrapper input {
+        max-width: 460px;
+    }
+
+
+
+}
+
+
+@media (min-width: 765px) and (max-width: 1259px) {
+    .sales-container {
+        padding: 3.5rem 0;
+    }
+
+    .swipe-section {
+        padding-left: 3.5rem;
+    }
+
+    .hero-inner .hero-slide-text {
+        left: 55%;
+    }    
+
+    #muji-stories{
+        padding-left: 1rem;
+    }   
+
+    .footer-section{
+        width: 80%;
+        margin: auto;
+    }
+
+    .footer-section article:first-child{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem
+    }
+
+    .footer-section .column{
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+
+@media (min-width: 1024px) and (max-width: 1259px){
+    .footer-section{
+        width: 65%;
+    }
+}
 
 @media (min-width: 1260px) {
 
@@ -986,105 +1128,50 @@ footer{
         padding-left: 6.25rem;
     }
 
-}
-
-@media (min-width: 765px) and (max-width: 1259px) {
-    .sales-container {
-        padding: 3.5rem 0;
-    }
-
-    .swipe-section {
-        padding-left: 3.5rem;
-    }
-
-    .hero-inner .hero-slide-text {
-        left: 55%;
-    }    
-
-    #muji-stories{
-        padding-left: 1rem;
-    }   
-}
-
-@media (min-width:765px) {
-
-    .sales-container {
-        grid-template-columns: 1fr 60%;
-        align-items: center;
-    }
-
-    .sales-text-container {
-        margin-left: 5rem;
-    }
-
-    .promo-gallery {
-        overflow-x: hidden;
-    }
-
-    .promo-card {
-        flex: 1 1 auto;
-    }
-
-    .promo-card img {
-        display: block;
-        width: 100%;
-        height: 105%;
-        object-fit: cover;
-    }
-
-    .promo-card p {
-        bottom: 5%;
-    }
-
-    .swipe-card {
-        flex: 0 0 calc((100vw - 2.5*var(--widget-margin))/4);
-        overflow: hidden;
-    }
-
-    .hero-inner{
-        aspect-ratio: 16/8;
-    }
-
-    .hero-inner-slider img[class*="mobile"]{
-        display: none;
-    }
-
-    .hero-inner-slider img[class*="desktop"]{
-        display: block;
-    }
-
-    .slide-indicator{
-        top: 75px;
-        right: 40px;
-    }
-
-    .link-wrapper{
+    .footer-section{
         display: flex;
-        gap: 1.5rem;
+        flex-direction: row;
+        gap: 3rem;
     }
 
-    .best-sellers-gallery{
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 0.5rem;
+    .footer-section article:first-child{
+        display: flex;
+        flex-direction: row;
+        gap: 3rem;
     }
 
-
-    .product-card{
-        flex: 0 0 25%;
+    .footer-section article:nth-child(2){
+        max-width: 250px;
     }
 
-    .story-card{
-        flex: 0 0 calc((100vw - var(--widget-margin))/4);
+    .footer-section .column{
+        display: contents;
     }
 
-    .story-card .title{
-        font-size: 1.125rem;
+    .footer-div{
+        min-width: 200px;
     }
 
-    .story-card .description{
-        font-size: 1rem;
+    .footer-logo-container{
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        padding: 0 4rem;
     }
 
+    .footer-logo-container p {
+        margin: 0;    
+    }
 
+    .line{
+        top: 50%;
+    }
+
+    #consent-manager {
+        position: relative;
+        padding: .5rem 4rem 2.5rem 2.5rem;
+        display: flex;
+        justify-content: flex-end;
+    }
 
 }
